[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopulse"
version = "0.4.6"
authors = [
  { name="Alan Murray", email="pypi@atmurray.net" },
]
description = """
Asynchronous library to control Rollease Acmeda Automate roller blinds via a version 1 Pulse Hub.
"""
readme = "README.md"
license = {file = 'LICENSE'}
requires-python = ">=3.4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/atmurray/aiopulse"
Issues = "https://github.com/atmurray/aiopulse/issues"